--- a/public/style.css
+++ b/public/style.css
@@ -27,7 +27,7 @@ a {
     gap: 12px;
 }
 .tracking-item {
-    background-color: var(--tg-theme-secondary-bg-color, #f4f4f5);
+    background-color: var(--tg-theme-text-color, #f4f4f5);
     border-radius: 10px;
     padding: 12px;
     display: flex;
@@ -48,7 +48,7 @@ a {
     margin-top: 16px;
 }
 .event-item {
-    background-color: var(--tg-theme-secondary-bg-color, #f4f4f5);
+    background-color: var(--tg-theme-text-color, #f4f4f5);
     border-radius: 8px;
     padding: 10px;
     font-size: 14px;
@@ -109,7 +109,7 @@ a {
 }
 
 .event {
-    background: #f9fafb;
+    background: var(--tg-theme-text-color);
     padding: 12px;
     border-radius: 8px;
 }
@@ -133,7 +133,7 @@ a {
 
 .time-metrics {
     margin-top: 16px;
-    background: #f3f4f6;
+    background: var(--tg-theme-text-color);
     padding: 12px;
     border-radius: 8px;
 }
