--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,6 @@ body {
     padding: 0;
 }
 
-
 a {
     color: var(--tg-theme-link-color);
 }
@@ -27,7 +26,7 @@ a {
     gap: 12px;
 }
 .tracking-item {
-    background-color: var(--tg-theme-text-color, #f4f4f5);
+    background-color: var(--tg-theme-secondary-bg-color, #f4f4f5);
     border-radius: 10px;
     padding: 12px;
     display: flex;
@@ -48,7 +47,7 @@ a {
     margin-top: 16px;
 }
 .event-item {
-    background-color: var(--tg-theme-text-color, #f4f4f5);
+    background-color: var(--tg-theme-secondary-bg-color, #f4f4f5);
     border-radius: 8px;
     padding: 10px;
     font-size: 14px;
@@ -70,6 +69,10 @@ a {
     color: var(--tg-theme-hint-color, #707579);
     margin-top: 40px;
 }
+
+/*
+        DISPLAY TRACKING DATA
+*/
 
 .package-container {
     background: white;
@@ -109,7 +112,7 @@ a {
 }
 
 .event {
-    background: var(--tg-theme-text-color);
+    background: #f9fafb;
     padding: 12px;
     border-radius: 8px;
 }
@@ -133,7 +136,7 @@ a {
 
 .time-metrics {
     margin-top: 16px;
-    background: var(--tg-theme-text-color);
+    background: #f3f4f6;
     padding: 12px;
     border-radius: 8px;
 }
